# MCP-Check

./: readme.md
mcp-check/: README.md  pyproject.toml
mcp-check/docs/: implementation_plan.md  overview.md  tutorial.md
mcp-check/src/mcp_check/: __init__.py  cli.py  discovery.py  loader.py  models.py  state.py
mcp-check/src/mcp_check/commands/: __init__.py  beacon.py  common.py  fortify.py  ledger.py  pinpoint.py  pulse.py  sentinel.py  sieve.py  survey.py
mcp-check/tests/: conftest.py  test_beacon.py  test_ledger.py  test_pinpoint.py  test_pulse.py  test_sentinel.py  test_sieve.py  test_survey.py
mcp-check/tests/fixtures/: client-registry.json  manifests.json
mcp-diagnosis-tool-main/mcp-diagnosis-tool-main/: README.md  mcpDoctor.js  package-lock.json  package.json  server.js
mcp-diagnosis-tool-main/mcp-diagnosis-tool-main/public/: index.html  script.js  style.css
mcp-diagnosis-tool-main/mcp-diagnosis-tool-main/test/: mcpDoctor.test.js
mcp-snitch-main/mcp-snitch-main/: .build-credentials.example  .gitignore  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  README.md  SOURCE_HEADER.txt  build.sh  build_dev.sh  run-debug.sh  run.sh
mcp-snitch-main/mcp-snitch-main/MCPProxy/: mcp_http_proxy.swift  mcp_http_proxy_main.swift  mcp_proxy.swift  mcp_proxy_main.swift  mcp_security_common.swift
mcp-snitch-main/mcp-snitch-main/MCPSnitch/: APIKeyScanner.swift  APIKeysManagementView.swift  ApprovalDialogView.swift  ConfigurationManager.swift  GuardRailsManager.swift  GuardRailsView.swift  Info.plist  (+12 more)
mcp-snitch-main/mcp-snitch-main/MCPSnitch.xcodeproj/: project.pbxproj
